--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "dependencies": {},
   "devDependencies": {
     "grunt": "^0.4.5",
-    "webpack": "^1.3.2"
+    "grunt-webpack": "^1.0.7",
+    "webpack": "^1.3.2",
+    "webpack-dev-server": "^1.4.7"
   },
   "repository": {
     "type": "git",
