--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {},
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-open": "^0.2.3",
     "grunt-webpack": "^1.0.7",
     "webpack": "^1.3.2",
     "webpack-dev-server": "^1.4.7"
